# AeroNyxSDK

./: readme.md
cxx/: readme.md
cxx/crypto_tools/: key_tools.cpp  key_tools.h  key_tools_c.cpp  key_tools_c.h  string_tools.h
cxx/crypto_tools/aes/: aes.cpp  aes.h
cxx/crypto_tools/ecdh_manager/: ecdh_manager.cpp  ecdh_manager.h
cxx/crypto_tools/hash/: sha256.cpp  sha256.h  sha512.cpp  sha512.h
cxx/crypto_tools/secp256k1/: basic-config.h  bench.h  bench_ecdh.c  gen_context.c  main_impl.h  num.h  secp256k1.c
cxx/cxx_demo/: CMakeLists.txt  main.cpp  simple_client_item.h  simple_client_server.h  simple_http.h  simple_key.h  simple_package.h
